# golinks

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  client.py  go.mod  go.sum  justfile  main.go  requirements.txt  test.db
.github/workflows/: build.yml  nightly-scan.yml  pr.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  secrets.yaml
charts/: golinks-0.2.10.tgz  golinks-0.2.12.tgz  golinks-0.2.13.tgz  golinks-0.2.14.tgz  golinks-0.2.15.tgz  golinks-0.2.19.tgz  golinks-0.2.20.tgz  golinks-0.2.21.tgz  golinks-0.2.22.tgz  golinks-0.2.23.tgz  golinks-0.2.24.tgz  golinks-0.2.25.tgz  golinks-0.2.26.tgz  golinks-0.2.27.tgz  golinks-0.2.28.tgz  golinks-0.2.29.tgz  golinks-0.2.30.tgz  golinks-0.2.31.tgz  golinks-0.2.32.tgz  golinks-0.2.34.tgz  golinks-0.2.35.tgz  golinks-0.2.36.tgz  golinks-0.2.37.tgz  golinks-0.2.38.tgz  golinks-0.2.39.tgz  golinks-0.2.40.tgz  golinks-0.2.42.tgz  golinks-0.2.43.tgz  golinks-0.2.44.tgz  golinks-0.2.8.tgz  golinks-0.2.9.tgz  index.yaml
charts/golinks/: Chart.yaml  values.yaml
charts/golinks/templates/: NOTES.txt  configmap.yaml  deployment.yaml  service.yaml
charts/golinks/templates/tests/: test-connection.yaml
cmd/: add.go  clear.go  delete.go  list.go  root.go  server.go  update.go
confs/: links.yaml
data/: links.yaml.example
devstack/: Dockerfile  docker-compose.yaml  parser.dockerfile  router.dockerfile
healthcheck/: Cargo.toml
healthcheck/src/: main.rs
nginx/sites-available/: golinks.conf
parser/: parser.py  route_template
scripts/: nginx.sh  parser.sh
server/: models.go  server.go  sqlite.go
src/: config.rs  lib.rs  main.rs  models.rs  utils.rs
