[package]
name = "golinks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["std", "clock"] }
config = { version = "0.13.3", default-features = false }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
fern = { version = "0.6.2", features = ["colored"] }
log = { version = "0.4.19", features = ["std"] }
serde = "1.0.171"
serde_yaml = "0.9.17"

[dev-dependencies]
serial_test = "2.0.0"

[profile.release]
strip = true

[workspace]
members = ["healthcheck"]