[package]
name = "golinks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["std", "clock"] }
config = { version = "0.15.6", default-features = false }
rocket = { version = "0.5.1", features = ["json"] }
fern = { version = "0.7.1", features = ["colored"] }
log = { version = "0.4.25", features = ["std"] }
serde = "1.0.217"
serde_yaml = "0.9.34"
notify = "8.0.0"
tokio = { version = "1.43.0", features = ["rt"] }
notify-debouncer-mini = "0.6.0"

[dev-dependencies]
serial_test = "3.2.0"

[profile.release]
strip = true

[workspace]
members = ["healthcheck"]
